first version of the english slides for OpenFoodHunt 2015

--- a/presentations/hunt2015-reveal.js/index.html
+++ b/presentations/hunt2015-reveal.js/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Open Food Facts - The free product database</title>
+		<title>Open Food Facts - The free food products database</title>
 
 		<meta name="description" content="Making the food industry more transparent,thanks to open data and crowdsourcing">
 		<meta name="author" content="">
@@ -51,7 +51,7 @@
 				<section>
 					<section>
 						<h2>Open?</h2>
-						<p><b>For consumers,the food industry is a black box</b></p>
+						<p><b>For consumers, the food industry is a black box</b></p>
 					</section>
 					<section>
 						<h4>Beef</h4>
@@ -70,10 +70,10 @@
                                 <section data-background="#dddddd">
                                         <section >
                                                 <h2>Data?</h2>
-                                                <p><b>A lot of useful data available ...</b></p>
+                                                <p><b>A lot of useful data available...</b></p>
                                         </section>
                                         <section>
-					<p><b>... if you read the fine print ...</b></p>
+					<p><b>... if you read the fine print...</b></p>
                                                 <img width="1366" height="172" data-src="pictures/ingredients.jpg" alt="A list of ingredients as found on the back of a package">
                                         </section>
                                         <section>
@@ -81,7 +81,7 @@
                                                 <img width="1336" height="600" data-src="pictures/nutritional-facts.jpg" alt="Nutrition information as found on the back of a package">
                                         </section>
                                         <section>
-                                        <p><b>... on all the products</b></p>
+                                        <p><b>... on all products</b></p>
                                                 <img width="1336" height="600" data-src="pictures/cereal-aisle.jpg" alt="A picture of the cereal aisle">
                                         </section>
                                 </section>
@@ -132,7 +132,7 @@
 						<p class="fragment">Additives</p>
                                                 <p class="fragment">Allergens</p>
                                                 <p class="fragment">Palm Oil</p>
-                                                <p class="fragment">Nutrition trafic lights</p>
+                                                <p class="fragment">Nutrition traffic lights</p>
                                                 <p class="fragment">Nutrition grade A -> E</p>
                                                 <p class="fragment">Ingredients Translator</p>
                                                 <p class="fragment">And more ...</p>
@@ -179,7 +179,7 @@
                                         <section>
                                                 <h2>Re-uses</h2>
                                                 <p> Open data:</p>
-						<p><li>OdbL: Open Database Licence</li></p>
+						<p><li>ODBL: Open Database Licence</li></p>
                                                 <p><li>Free re-use for everyone and for all uses</li></p>
                                                 <p><li>Attribution and Share-Alike</li></p>
                                         </section>
