open food hunt logo added

--- a/presentations/hunt2015-reveal.js/index.html
+++ b/presentations/hunt2015-reveal.js/index.html
@@ -40,12 +40,11 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background="#dddddd">
-					<h1>Open Food Facts</h1>
-					<h3>The free food products database</h3>
+				<section data-background="#ffffff">
 					<p>
-					<img width="712" height="575" data-src="pictures/OFF-logo.png" alt="Open Food Facts logo">
+					<img width="700" data-src="pictures/OFF-logo.png" alt="Open Food Facts logo">
 					</p>
+					<p>slides: <a href="http://bu.gs/ofh15">http://bu.gs/ofh15</a></p>
 				</section>
 
 				<section>
@@ -63,6 +62,13 @@
                                                 <h4>Vegetable oil</h4>
                                                 <p>
                                                 <img width="387" height="600" data-src="pictures/nutella.png" alt="A nutella jar">
+                                                </p>
+                                        </section>
+
+                                        <section>
+                                                <h4>Origin</h4>
+                                                <p>
+                                                <img height="600" data-src="pictures/honey.png" alt="A honey jar">
                                                 </p>
                                         </section>
 				</section>
@@ -110,15 +116,15 @@
                                         </section>
                                         <section>
 
-<img width="375" height="111" data-src="pictures/apple-store.png" alt="The apple store logo">
+<a href="https://itunes.apple.com/en/app/open-food-facts/id588797948"><img width="375" height="111" data-src="pictures/apple-store.png" alt="The apple store logo"></a>
 </br>
-<img width="360" height="111" data-src="pictures/google-play.png" alt="The google play logo">
+<a href="https://play.google.com/store/apps/details?id=org.openfoodfacts.scanner"><img width="360" height="111" data-src="pictures/google-play.png" alt="The google play logo"></a>
 </br>
 <img width="360" height="111" data-src="pictures/windows-store.png" alt="The windows store logo">
                                         <p><b> (FirefoxOS in the making) </b></p>
                                         </section>
                                         <section>
-                                                <img width="468" height="560" data-src="pictures/tagada.png" alt="A product facts sheet">
+                                                <img height="600" data-src="pictures/oatmeal-biscuits.png" alt="A product facts sheet">
                                         <p><b> Crowsourcing from the web</b></p>
                                         </section>
                                 </section>
@@ -130,10 +136,10 @@
                                         <section>
 						<h4> decrypting labels </h4>
 						<p class="fragment">Additives</p>
+                                                <p class="fragment">Additives</p>
                                                 <p class="fragment">Allergens</p>
                                                 <p class="fragment">Palm Oil</p>
                                                 <p class="fragment">Nutrition traffic lights</p>
-                                                <p class="fragment">Nutrition grade A -> E</p>
                                                 <p class="fragment">Ingredients Translator</p>
                                                 <p class="fragment">And more ...</p>
                                         </section>
@@ -219,6 +225,12 @@
                                         </section>
                               </section>
                               <section>
+
+                                        <section>
+                                                <h2>Open Food Hunt 2015</h2>
+                                                <img data-src="pictures/open-food-hunt-2015.png" alt="Open food Hunt 2015">
+                                        </section>
+
                                         <section>
                                                 <h2>Open Food Hunt 2015</h2>
                                                 <p>Goals</p>
@@ -232,6 +244,10 @@
                                                 <p class="fragment">Food Ambassadors who recruit new contributors</p>
                                                 <p class="fragment"><b>Friendly competition with points,rankings and rewards for participants</b></p>
                                         </section>
+
+
+
+
                               </section>
                               <section>
                                         <section>
